# vault

./: .gitignore  Cargo.toml  Dioxus.toml  NEW_README.md  input.css  proxy.js
assets/: main.css  tailwind.css
assets/css/: chat.css  identity.css  network.css  vault.css
backend/: Cargo.toml
backend/src/: crypto.rs  discovery.rs  main.rs  onion.rs  types.rs
frontend/: package-lock.json  package.json  vite.config.js
frontend/src/: app.css  app.html
frontend/src/lib/: api.js
frontend/src/routes/: +page.svelte
frontend/src/routes/chat/: +page.svelte
frontend/src/routes/contacts/: +page.svelte
frontend/src/routes/network/: +page.svelte
frontend/src/routes/vault/: +page.svelte
src/: identity.rs  main.rs  network.rs  p2p_chat.rs  p2p_crypto.rs  p2p_server.rs  p2p_types.rs  styles.rs  types.rs  vault.rs
