[package]
name = "vault"
version = "0.1.0"
authors = ["Smartlinuxcoder <smartcoder@smartlinux.xyz>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { version = "0.7.1", features = ["fullstack", "router"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
aes-gcm = { version = "0.10", optional = true }
sha2 = "0.10"
rand = "0.8"
getrandom = { version = "0.2", features = ["js"] }
js-sys = "0.3"
rsa = { version = "0.9", features = ["sha2"] }
bincode = "2.0.0-rc.3"
futures-util = "0.3"
gloo-net = "0.5"
wasm-bindgen-futures = "0.4"
once_cell = "1.19"

# Tokio solo per server (non supportato su WASM con rt-multi-thread)
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { version = "1", features = ["time", "sync", "rt-multi-thread", "macros"] }

# Tokio limitato per WASM
[target.'cfg(target_arch = "wasm32")'.dependencies]
tokio = { version = "1", features = ["sync"] }

[features]
default = ["web", "server"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]
server = ["dioxus/server", "dep:aes-gcm"]
